Issue #2738715 by yongt9412, pivica, jmuzz, tassilogroeper, miro_dietiker: Improve Paragraph collapsed/closed summary; update text color

--- a/css/paragraphs.admin.css
+++ b/css/paragraphs.admin.css
@@ -43,7 +43,7 @@
   position: relative;
   width: 100%;
 
-  color: #888888;
+  color: #777;
   overflow: hidden;
   word-break: break-all;
 }
